# napari-bioimageio

./: .gitignore  MANIFEST.in  README.md  pylintrc  requirements.txt  requirements_dev.txt  requirements_lint.txt  requirements_mypy.txt  requirements_pypi.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
NEW_PACKAGE/: __init__.py
bioimageio.napari/: __init__.py  model_manager.py
bioimageio/napari/: __init__.py
examples/bioengine-app-demo/: README.md  setup.cfg  test-hypha.py
examples/bioengine-app-demo/bioengine_app_demo/: __init__.py  _bioengine_app.py  napari.yaml
examples/bioimageio-hpa/: README.md  setup.cfg
examples/bioimageio-hpa/bioimageio_hpa/: __init__.py  _bhpa.py  napari.yaml
examples/hpa-segmentation/: README.md  setup.cfg
examples/hpa-segmentation/hpa_segmentation/: __init__.py  _bhpaseg.py  napari.yaml
examples/hpa-single-cell/: README.md  setup.cfg
examples/hpa-single-cell/hpa_single_cell/: __init__.py  _bhpa.py  napari.yaml
examples/live-cell-segmentation-boundary/: README.md  setup.cfg
examples/live-cell-segmentation-boundary/live_cell_segmentation_boundary/: __init__.py  _blivecellsegbound.py  napari.yaml
examples/nuclei-segmentation-boundary/: README.md  setup.cfg
examples/nuclei-segmentation-boundary/nuclei_segmentation_boundary/: __init__.py  _bnucleisegbound.py  napari.yaml
napari-bioimage-io/: __init__.py  model_manager.py
napari_bioimageio/: __init__.py  _bmm.py  _inference.py  _utils.py  model_manager.py  napari.yaml
napari_plugins/: README.md
napari_plugins/bioimageio-hpa/: setup.cfg
napari_plugins/bioimageio-hpa/bioimageio_hpa/: _bhpa.py  napari.yaml
napari_plugins/bioimageio-model-manager/: setup.cfg
napari_plugins/bioimageio-model-manager/bioimageio_model_manager/: __init__.py  _bmm.py  napari.yaml
scripts/: publish.sh
tests/: __init__py
