[metadata]
name = napari_bioimageio
version = file: napari_bioimageio/VERSION
classifiers =
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    napari
    bioimageio.core>=0.5.1
    PyYAML>=6.0
python_requires = >=3.7
include_package_data = True

[options.entry_points]
napari.manifest =
    napari-bioimageio = napari_bioimageio:napari.yaml

[options.package_data]
napari_bioimageio = napari.yaml
