[metadata]
name = bioengine_app_demo
version = 0.0.1
classifiers =
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    napari
    napari-bioimageio
    msgpack
python_requires = >=3.7
include_package_data = True

[options.entry_points]
napari.manifest =
    bioengine-app-demo = bioengine_app_demo:napari.yaml

[options.package_data]
bioengine-app-demo = napari.yaml
