[metadata]
name = live_cell_segmentation_boundary
version = 0.0.1
classifiers =
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    napari
    napari-bioimageio
python_requires = >=3.7
include_package_data = True

[options.entry_points]
napari.manifest =
    live-cell-segmentation-boundary = live_cell_segmentation_boundary:napari.yaml

[options.package_data]
live-cell-segmentation-boundary = napari.yaml
