[metadata]
name = bioimageio_model_manager
version = 0.0.1
classifiers =
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    napari
    bioimageio.napari
python_requires = >=3.7
include_package_data = True

[options.entry_points]
napari.manifest =
    bioimageio-model-manager = bioimageio_model_manager:napari.yaml

[options.package_data]
bioimageio_model_manager = napari.yaml
